--- a/GoodsApi.csproj
+++ b/GoodsApi.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,6 +36,7 @@
     <None Remove="Infrustructure\Extensions\DependencyInjection\" />
     <None Remove="Services\OrderService\" />
     <None Remove="Repositories\Interfaces\" />
+    <None Remove="Infrustructure\SwaggerOptions\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Infrustructure\" />
@@ -49,5 +51,6 @@
     <Folder Include="Infrustructure\Extensions\DependencyInjection\" />
     <Folder Include="Services\OrderService\" />
     <Folder Include="Repositories\Interfaces\" />
+    <Folder Include="Infrustructure\SwaggerOptions\" />
   </ItemGroup>
 </Project>
