--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MySqlDB": "your mysql connection string"
+        "MySqlDB": "your mysql connection"
     }
 }
 
