deprecate generators, prepopulate with context config

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MySqlDB": "your mysql connection"
+        "MySqlDB": "your connection string"
     }
 }
-
